# django-cars-project

./: .env  .gitignore  Django-cars.postman_collection.json  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: serializers.py  urls.py  views.py
apps/cars/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/choices/: engine_type_choices.py  region_choices.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_created_at_carmodel_updated_at.py  0002_initial.py  0003_alter_carmodel_options_alter_carmodel_brand_and_more.py  0003_alter_carmodel_user.py  0004_carmodel_body_type.py  0004_remove_carprofilemodel_is_used_carmodel_is_used.py  0005_carmodel_edit_attempts_carmodel_is_active_and_more.py  0006_alter_carmodel_is_active.py  (+1 more)
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  (+2 more)
backend/: manage.py
backend/configs/: asgi.py  celery.py  settings.py  urls.py
backend/core/: pagination.py
backend/templates/: bad_words.html  recovery.html
cars/: models.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: __init__.py  rest_conf.py
core/: pagination.py
core/enums/: action_token_enum.py
core/permissions/: is_account_owner.py  is_own_car_permission.py  is_premium_permisssion.py  is_super_user_permission.py
core/services/: email_service.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  router.js
templates/: register.html  test.html
(+77 files in other folders)
